tests/machine/x/go/len_map.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/len_map.go:15:3: undefined: A
../../../tests/machine/x/go/len_map.go:16:3: undefined: B

1: //go:build ignore
