tests/machine/x/go/len_map.go
//go:build ignore

// Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z

package main

import (
	"fmt"
	"strings"
)

type v map[string]any

func main() {
	fmt.Println(strings.TrimSpace(fmt.Sprintln(len(map[string]int{"a": 1, "b": 2}))))
}
